tests/rosetta/out/Zig/atomic-updates.error
zig build: exit status 1
/tmp/atomic-updates.zig:32:26: error: unused capture
